<resources>
    <string name="app_name">Clickerbot</string>
    <string name="collectdiasFairy">collectdiasfairy</string>
    <string name="collectskillsFairy">collectskillsfairy</string>
    <string name="collectGoldFairy">collectgoldfairy</string>
    <string name="collectReduceGoldFairy">collectreducegoldfairy</string>
    <string name="collectManaFairy">collectmanafairy</string>
    <string name="lvlbookofshadows">lvlbookofshadows</string>
    <string name="lvlchargedcard">lvlchargedcard</string>
    <string name="lvlstof">lvlstov</string>
    <string name="lvlchestofcontentment">lvlchestofcontentment</string>
    <string name="lvlheroicshield">lvlheroicshield</string>
    <string name="lvlbookofprophecy">lvlbookofprophecy</string>
    <string name="lvlkhrysosbowl">lvlkhrysosbowl</string>
    <string name="lvlzakyntoscoin">lvlzakyntoscoin</string>
    <string name="lvlgreatfaymedallion">lvlgreatfaymedallion</string>
    <string name="lvlnekosculpture">lvlnekosculpture</string>
    <string name="lvlcoinofebizu">lvlcoinofebizu</string>
    <string name="lvlbronzecompass">lvlbronzecompass</string>
    <string name="evergrowingstack">evergrowingstack</string>
    <string name="FluteOfTheSoloist">FluteOfTheSoloist</string>
    <string name="HeavenlySword">HeavenlySword</string>
    <string name="DivineRetribution">DivineRetribution</string>
    <string name="DrunkenHammer">DrunkenHammer</string>
    <string name="SamosekSword">SamosekSword</string>
    <string name="TheRetaliator">TheRetaliator</string>
    <string name="StryfesPace">StryfesPace</string>
    <string name="HerosBlade">HerosBlade</string>
    <string name="TheSwordOfStorms">TheSwordOfStorms</string>
    <string name="FuriesBow">FuriesBow</string>
    <string name="CharmOfTheAncient">CharmOfTheAncient</string>
    <string name="TinyTitanTree">TinyTitanTree</string>
    <string name="HelmOfHermes">HelmOfHermes</string>
    <string name="FruitOfEden">FruitOfEden</string>
    <string name="InfluentialElixir">InfluentialElixir</string>
    <string name="ORyansCharm">ORyansCharm</string>
    <string name="HeartOfStorms">HeartOfStorms</string>
    <string name="ApolloOrb">ApolloOrb</string>
    <string name="StickyFruit">StickyFruit</string>
    <string name="HadesOrb">HadesOrb</string>
    <string name="EaringsOfPortara">EaringsOfPortara</string>
    <string name="AvianFeather">AvianFeather</string>
    <string name="CorruptedRuneHeart">CorruptedRuneHeart</string>
    <string name="DurendalSword">DurendalSword</string>
    <string name="HelheimSkull">HelheimSkull</string>
    <string name="OathsBurden">OathsBurden</string>
    <string name="CrownOfConstellation">CrownOfConstellation</string>
    <string name="TitaniasSceptre">TitaniasSceptre</string>
    <string name="FaginsGrip">FaginsGrip</string>
    <string name="RingOfCallisto">RingOfCallisto</string>
    <string name="BladeOfDamocles">BladeOfDamocles</string>
    <string name="HelmetOfMadness">HelmetOfMadness</string>
    <string name="TitaniumPlating">TitaniumPlating</string>
    <string name="MoonlightBracelet">MoonlightBracelet</string>
    <string name="AmethystStaff">AmethystStaff</string>
    <string name="SwordOfTheRoyals">SwordOfTheRoyals</string>
    <string name="SpearitsVigil">SpearitsVigil</string>
    <string name="TheCobaltPlate">TheCobaltPlate</string>
    <string name="SigilsOfJudgement">SigilsOfJudgement</string>
    <string name="FoliageOfTheKeeper">FoliageOfTheKeeper</string>
    <string name="InvadersGjalarhorn">InvadersGjalarhorn</string>
    <string name="TitansMask">TitansMask</string>
    <string name="RoyalToxin">RoyalToxin</string>
    <string name="LaborersPendant">LaborersPendant</string>
    <string name="BringerOfRagnarok">BringerOfRagnarok</string>
    <string name="ParchmentOfForesight">ParchmentOfForesight</string>
    <string name="ElixirOfEden">ElixirOfEden</string>
    <string name="clickonhead">cliconhead</string>
    <string name="clickonbody">clickonbody</string>
    <string name="clickonleftarm">clickonleftarm</string>
    <string name="clickonrightarm">clickonrightarm</string>
    <string name="clickonleftfoot">clickonleftfoot</string>
    <string name="clickonrightfoot">clickonrightfoot</string>
    <string name="clickonlefshoulder">clickonlefshoulder</string>
    <string name="clickonrightshoulder">clickonrightshoulder</string>
</resources>
