<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/overall_margin"
    android:orientation="vertical">

    <clickerbot.com.troop.clickerbot.views.SettingsSwitch
        android:id="@+id/clickOnFairys"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settingitem_height"
        android:layout_margin="@dimen/overall_margin"
        android:background="@drawable/border"
        android:text="Click On Fairys"
        custom:setting_defaults="false"
        custom:settingkey_ids="@string/clickonfairyadds" />

    <clickerbot.com.troop.clickerbot.views.SettingsSwitch
        android:id="@+id/isVip"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settingitem_height"
        android:layout_margin="@dimen/overall_margin"
        android:background="@drawable/border"
        android:text="is Vip Fairy, no adds"
        custom:setting_defaults="false"
        custom:settingkey_ids="@string/acceptfairyadds" />


    <clickerbot.com.troop.clickerbot.views.SettingsSwitch
        android:id="@+id/collectDiasFairy"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settingitem_height"
        android:layout_margin="@dimen/overall_margin"
        android:background="@drawable/border"
        android:text="Collect Diamant Fairy"
        custom:setting_defaults="false"
        custom:settingkey_ids="@string/collectdiasFairy" />

    <clickerbot.com.troop.clickerbot.views.SettingsSwitch
        android:id="@+id/collectSkillsFairy"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settingitem_height"
        android:layout_margin="@dimen/overall_margin"
        android:background="@drawable/border"
        android:text="Collect Skills Fairy"
        custom:setting_defaults="false"
        custom:settingkey_ids="@string/collectskillsFairy" />

    <clickerbot.com.troop.clickerbot.views.SettingsSwitch
        android:id="@+id/collectGoldFairy"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settingitem_height"
        android:layout_margin="@dimen/overall_margin"
        android:background="@drawable/border"
        android:text="Collect Gold Fairy"
        custom:setting_defaults="false"
        custom:settingkey_ids="@string/collectGoldFairy" />

    <clickerbot.com.troop.clickerbot.views.SettingsSwitch
        android:id="@+id/collectReduceGoldFairy"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settingitem_height"
        android:layout_margin="@dimen/overall_margin"
        android:background="@drawable/border"
        android:text="Collect Reduce Gold Fairy"
        custom:setting_defaults="false"
        custom:settingkey_ids="@string/collectReduceGoldFairy" />

    <clickerbot.com.troop.clickerbot.views.SettingsSwitch
        android:id="@+id/collectManaFairy"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settingitem_height"
        android:layout_margin="@dimen/overall_margin"
        android:background="@drawable/border"
        android:text="Collect Mana Fairy"
        custom:setting_defaults="false"
        custom:settingkey_ids="@string/collectManaFairy" />


</LinearLayout>